tests/diagnostic_golden_cc/fixed_parse_continuation.diag
error[CF2004]: missing required identifier
  --> tests/diagnostic_golden_cc/fixed_parse_continuation.f:3:8
   = stage: parser
   = help: see docs/errors.md#CF2004
  |
3 |      1 )
  |        ^
