tests/diagnostic_golden_cc/fixed_parse_continuation.f
      PROGRAM P
      INTEGER A,
     1 )
      END
